--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,19 @@
         android:theme="@style/Theme.MySduTools"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Activity.SplashActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".Activity.MainActivity"
+            android:exported="true"
+            android:launchMode="singleTask"/>
+        <activity
             android:name=".Activity.AboutActivity"
             android:exported="false" />
         <activity
@@ -27,16 +40,10 @@
         <activity
             android:name=".Activity.MapActivity"
             android:exported="false" />
-        <activity
-            android:name=".Activity.MainActivity"
-            android:exported="true"
-            android:launchMode="singleTask">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+
+
         <service android:name="com.amap.api.location.APSService" />
+
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="183c717cda0b83b0fe88b404351f94cf" />
