--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,18 +19,21 @@
         android:theme="@style/Theme.MySduTools"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Activity.AddClassActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Activity.MainActivity"
             android:exported="true"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".Activity.AboutActivity"
             android:exported="false" />
@@ -40,7 +43,6 @@
         <activity
             android:name=".Activity.MapActivity"
             android:exported="false" />
-
 
         <service android:name="com.amap.api.location.APSService" />
 
