“V1.2版本更新，新增地图搜索功能”

--- a/app/src/main/assets/values.properties
+++ b/app/src/main/assets/values.properties
@@ -23,5 +23,96 @@ startOfStudyMonth=02
 startOfStudyDay=20
 nowVersion=1.1
 DATABASE_VERSION=2
+H1X=4795
+H1Y=5571
+hwsX=5874
+hwsY=5860
+hwnX=5880
+hwnY=5275
+hgyX=4015
+hgyY=6301
+zsyX=4010
+zsyY=7067
+
+K1X=4633
+K1Y=6297
+K2X=5064
+K2Y=6167
+K3X=5601
+K3Y=6109
+K4X=6092
+K4Y=6307
+K5X=5602
+K5Y=6534
+K6X=5067
+K6Y=6489
+
+N1X=4644
+N1Y=7065
+N2X=5060
+N2Y=6889
+N3X=5603
+N3Y=6869
+N5X=6053
+N5Y=7065
+N7X=5602
+N7Y=7285
+N8X=5064
+N8Y=7274
+
+FYCCX=3083
+FYCCY=7501
+BWGX=4397
+BWGY=7803
+
+S1X=4953
+S1Y=8500
+S2X=5734
+S2Y=8496
+S3X=5201
+S3Y=8759
+S4X=5475
+S4Y=8755
+S5X=4938
+S5Y=9003
+S6X=5741
+S6Y=9000
+S7X=5199
+S7Y=9247
+S8X=5475
+S8Y=9243
+S9X=4932
+S9Y=9486
+S10X=5746
+S10Y=9477
+S11X=5169
+S11Y=9755
+S13X=5169
+S13Y=9765
+
+SCX=5624
+SCY=9904
+
+T1X=6134
+T1Y=8803
+T2X=6137
+T2Y=9004
+
+B12X=4761
+B12Y=2634
+B7X=4652
+B7Y=2320
+B4X=4625
+B4Y=1964
+
+SDX=3987
+SDY=9516
+NDX=4155
+NDY=819
+EDX=6308
+EDY=5571
+WDX=3490
+WDY=5558
+
 
 
