--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.MySduTools"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Activity.SearchFreeRoomActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.AddClassActivity"
             android:exported="false" />
         <activity
