“V1.40更新，添加我的DDL功能”

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.MySduTools"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Activity.DdlActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.SearchFreeRoomActivity"
             android:exported="false" />
         <activity
